# traffic-sign-robot-navigation

./: README.md
Files/Hector/: How to use codes.txt  navigator_3.py
Files/Signs_Models/sign_left/materials/scripts/: sign_left.material
Files/Signs_Models/sign_park/: model.config
Files/Signs_Models/sign_right/: model.sdf
Files/Signs_Models/sign_straight/: model.config  model.sdf
Files/amr-ros-config/: package.xml
Files/amr-ros-config/description/urdf/: pioneer3at.urdf  pioneer3at_Customfull.urdf  pioneer3at_Customfull_fixed.urdf  pioneer3at_bodyN.urdf  pioneer3at_lidar_rgb(Copy).urdf  pioneer3at_lidar_rgb.urdf  pioneer3dx.urdf.save
Files/amr-ros-config/gazebo/: final_Added.world
Files/amr-ros-config/gazebo/media/meshes/: office.mtl
Files/amr-ros-config/gazebo/models/office_desk/: model.sdf
Files/amr-ros-config/gazebo/models/sign_left/: model.config  model.sdf
Files/amr-ros-config/gazebo/models/sign_park/: model.sdf
Files/amr-ros-config/gazebo/models/sign_park/materials/scripts/: sign_park.material
Files/amr-ros-config/gazebo/models/sign_right/: model.config
Files/amr-ros-config/launch/: project_world.launch  slam_hector.launch  traffic_exploration.launch
Files/amr-ros-config/nav_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Files/amr-ros-config/scripts/: coordinate_viewer.py  move_robot.py  navigator_3.py  reset_robot.py  traffic_detector_2.py
Files/gMapping/: How to use codes.txt  coordinate_viewer.py  reset_robot.py  slam_gmapping.launch  traffic_detector_2.py
(+2 files in other folders)
